--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,20 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, "Microsoft YaHei", sans-serif;
+    /* 微软 */
+    /* font-family: Arial, "Microsoft YaHei", sans-serif; */
+    /* 字体大小 */
+    font-size: 16px;
+    /* 字体颜色 */
+    color: #333;
+    /* 背景颜色 */
+    background-color: #f0f0f0;
+    /* 字体粗细 */
+    font-weight: 400;
+    /* 字体行高 */
+    /* font-family: Arial, "Microsoft YaHei", sans-serif; */
+    
+
     background-color: #f0f0f0;
 }
 *{
@@ -12,21 +25,27 @@ body {
 header {
     background: linear-gradient(to bottom, #0099cc, #006699);
     color: white;
-    padding: 20px;
+    padding: 5px;
     text-align: center;
+    
 }
 
 h1 {
     margin: 0;
     font-size: 24px;
 }
-
+.table-box table {
+    position: relative;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="130" height="120"><text x="50%" y="45%" font-family="Arial" font-size="13" fill="rgba(128,128,128,0.15)" text-anchor="middle" transform="rotate(25, 100, 100)">103005211929156041124139364<tspan x="50%" dy="25">SHRPTHELEDPEPDE</tspan></text></svg>');
+    background-repeat: repeat;
+    background-position: center;
+}
 .result-container {
     width: 90%;
     max-width: 1200px;
     margin: 20px auto;
-    background: rgb(216, 223, 230);
-    padding: 20px;
+    background: rgb(235, 235, 237);
+    padding: 20px 0 0 0 ;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
@@ -43,19 +62,20 @@ table {
 }
 
 th, td {
-    border: 1px solid #ddd;
+    border: 1.5px solid rgB(183, 183, 183);
     padding: 8px;
     text-align: center;
 }
 
 th {
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
     /* width: 100px; */
 }
 
 td {
-    color: #0099cc;
-    font-weight: bold;
+    color: rgb(21, 100, 137);
+    font-weight: bolder;
+    font-size: 17px;
 }
 
 .verification-code {
@@ -72,7 +92,7 @@ td {
 }
 
 .close-button {
-    background: linear-gradient(to bottom, #ffcc00, #ff9900);
+    background: linear-gradient(to bottom, #ffcc00, #f19813);
     border: none;
     color: red;
     padding: 10px 40px;
