--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     /* 字体粗细 */
     font-weight: 400;
     /* 字体行高 */
-    /* font-family: Arial, "Microsoft YaHei", sans-serif; */
+    font-family: "Segoe UI", Arial, sans-serif;
     
 
     background-color: #f0f0f0;
